--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37450,7 +37450,7 @@ a.close.disabled {
   top: 0;
   left: 0;
   z-index: 1050;
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -48267,6 +48267,10 @@ readers do not read off random characters that represent icons */
 .fab {
   font-family: "Font Awesome 5 Brands";
   font-weight: 400;
+}
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .router-link-exact-active {
