--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,9 @@ $fa-font-path: "../webfonts";
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
+.modal{
+    background-color: rgba(0, 0, 0, 0.5);
+}
 .router-link-exact-active{
     background-color:  #2454f1 !important;
     color: white;
